# Drip

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  README.zh-CN.md  SETUP-LIVE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml
benchmarks/: README.md  SCHEMA.md
benchmarks/cases/: 001_scale_dilemma.yaml  002_pause_loss.yaml  003_budget_reallocation.yaml  004_creative_fatigue.yaml  005_anomaly_diagnosis.yaml  006_cohort_quality.yaml  007_audience_expansion.yaml  008_bid_strategy_switch.yaml  009_market_entry.yaml  010_crisis_response.yaml
cases/: autopilot.json  cross-platform-triage.json  index.json  intraday-guard.json
docs/: architecture.md  deploy.md  intraday-research.md  quickstart.md  vision.md
examples/: account.yaml  demo_game.yaml
scripts/: build_real_cases.py  capture_cases.py  deploy_supabase.sh  dev_backend.ts  itest_backend.ts
src/drip/: __init__.py  allocator.py  analyst.py  attribution.py  cli.py  collectors.py  config.py  creative.py  feedback.py  graph.py  log.py  orchestrator.py  pipeline.py  safety.py  strategist.py  supervisor.py
src/drip/adapters/: __init__.py  ads.py  bidding.py  image.py  prediction.py  simulation.py  video.py  writers.py
src/drip/data/: __init__.py  metrics.py
src/drip/engine/: __init__.py  cards.py  engine.py  intraday.py  rules.py  signals.py
src/drip/eval/: __init__.py  agents.py  bench.py  judges.py  loader.py  schema.py  scorer.py
src/drip/llm/: __init__.py  client.py  providers.py
src/drip/workers/: __init__.py  audience.py  base.py  bidding.py  creative.py  reporter.py
supabase/: config.toml
supabase/functions/_shared/: auth.ts  cors.ts  meta.ts
supabase/functions/ads-apply/: index.ts
supabase/functions/ads-pull/: index.ts
supabase/functions/meta-oauth/: index.ts
supabase/migrations/: 0001_drip_live.sql  20260610190000_user_settings.sql
tests/: test_ads_writer.py  test_allocator.py  test_analyst.py  test_attribution.py  test_collectors.py  test_config.py  test_creative.py  test_engine.py  test_eval.py  test_feedback.py  test_intraday.py  test_llm.py  test_pipeline.py  test_safety.py  test_smoke.py  test_strategist.py  test_supervisor.py  test_writers.py
web/: about.html  app.css  app.html  app.js  auth.js  config.js  engine.js  index.html  index.zh-CN.html  live.js  llm.js  real-cases.js  run.js
