[project]
name = "drip-agent"
version = "0.0.1"
description = "Autonomous user-acquisition agent for anime / gacha mobile games."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.12"  # locked by OASIS upper bound
authors = [{ name = "Drip Contributors" }]
keywords = ["agent", "marketing", "user-acquisition", "anime", "gacha", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]

dependencies = [
  # Orchestration
  "claude-agent-sdk>=0.1.0",
  "anyio>=4.0",

  # CLI / config
  "click>=8.1",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "rich>=13.0",

  # HTTP / async
  "httpx>=0.27",
  "pydantic>=2.0",

  # LLM / image / video providers
  "openai>=1.50",                  # gpt-image-2
  "volcenginesdkarkruntime>=1.0",  # Seedance 2.0 via Volc Engine ARK

  # Simulation
  "camel-oasis>=0.2.5",            # multi-agent social simulation

  # Observability
  "langfuse>=2.0",

  # Data
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
drip = "drip.cli:main"

[project.urls]
Homepage = "https://drip.dev"
Repository = "https://github.com/YunyueLi/Drip"
Issues = "https://github.com/YunyueLi/Drip/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drip"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
