[project]
name = "drip-agent"
version = "0.0.7"
description = "Open-source reference implementation of an AI user-acquisition agent, with a reproducible decision benchmark."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.13"  # CI verifies 3.11; deps support 3.12
authors = [{ name = "Drip Contributors" }]
keywords = ["agent", "marketing", "user-acquisition", "benchmark", "claude", "open-source"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]

# Core deps are intentionally minimal and all rock-solid on PyPI, so a fresh
# install + `drip run` (offline samples) works with zero heavy SDKs. Provider
# SDKs live in extras and are imported lazily — see src/drip/adapters/.
dependencies = [
  "anyio>=4.0",
  "click>=8.1",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "rich>=13.0",
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
orchestrator = ["claude-agent-sdk>=0.1.0"]
providers = ["openai>=1.50", "volcengine-python-sdk"]  # volcengine-python-sdk → import volcenginesdkarkruntime
obs = ["langfuse>=2.0"]
data = ["pandas>=2.0"]
all = [
  "claude-agent-sdk>=0.1.0",
  "openai>=1.50",
  "volcengine-python-sdk",  # import name: volcenginesdkarkruntime
  "langfuse>=2.0",
  "pandas>=2.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
drip = "drip.cli:main"

[project.urls]
Homepage = "https://drip.dev"
Repository = "https://github.com/YunyueLi/Drip"
Issues = "https://github.com/YunyueLi/Drip/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drip"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
# Vendored 3rd-party skill (installed via uipro-cli) — not project code, not linted.
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# RUF001/2/3: × (ROAS multiplier) and – (ranges) are intentional domain notation.
# RUF022: __all__ is grouped by slot with comments, not alphabetical, on purpose.
# UP042: str+Enum is kept for JSON/`.value` ergonomics (vs StrEnum).
ignore = ["E501", "RUF001", "RUF002", "RUF003", "RUF022", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
